# genesis-pepper-brain

./: .gitignore  Dockerfile  main.py  requirements.txt  run_genesis.sh  setup.cfg  setup_genesis.sh
core/: __init__.py  logger.py  plugin_interface.py  plugin_loader.py  settings.py
modules/: __init__.py  database.py  decision_engine.py  external_ai.py  mock_pepper_interface.py  pepper_interface.py  reminder.py  response_formatter.py  sentiment.py
modules/dialogue/: dialogue_manager.py  gemini_adapter.py
modules/utils/: cache.py  memory_manager.py  module_loader.py  personality_loader.py
utils/: cache.py  voice.py
