# setup.cfg
[metadata]
name = genesis_pepper_brain
version = 3.0.0
author = Your Name
author_email = your.email@example.com
description = GENESIS AI Middleware Brain for Pepper Robot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your.project.url/genesis-pepper
license = MIT 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta 
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Robotics


[options]
packages = find:
python_requires = >=3.10
install_requires =
    pydantic>=2.5.0,<3.0.0
    pydantic-settings>=2.1.0,<3.0.0
    aiohttp>=3.9.0,<4.0.0
    schedule>=1.2.0,<1.3.0
    spacy>=3.7.0,<3.8.0
    dateparser>=1.2.0,<1.3.0
    aiofiles>=23.2.0,<24.0.0
    google-generativeai>=0.3.0,<0.6.0
    vaderSentiment>=3.3.0,<3.4.0


[options.extras_require]
dev =
    pytest>=7.4.0,<8.0.0
    pytest-asyncio>=0.21.0,<0.24.0
    flake8>=6.1.0,<7.0.0
    mypy>=1.5.0,<1.11.0
    types-PyYAML
    types-requests
    types-aiofiles
    types-dateparser


[options.entry_points]
genesis.plugins =
    # Placeholder for future Pepper-specific plugins

console_scripts =
    genesis-brain = main:main_cli_entry
    

[flake8]
max-line-length = 120
extend-ignore = E203, W503 


[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True